Lab01/CloudFormation/1-security.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: 'Security Configuration.'
Parameters:
  AllowSSHIP:
    Description: 'The IP address range that is allowed to SSH into the EC2 instances. This should be in CIDR notation (e.g., 0.0.0.0/0 for all IPs).'
    Type: String
    Default: 0.0.0.0/0
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: 'Must be a valid IP CIDR range of the form x.x.x.x/x.'
  VPC:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID
  PublicSubnetID:
    Type: AWS::EC2::Subnet::Id
    Description: Public subnet ID
Resources:
  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref AWS::StackName
        - Key: Network
          Value: Public
        - Key: Name
          Value: !Join
            - ""
            - - !Ref VPC
              - -public-nacl

  InboundAllowAllNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: allow
      Egress: "false"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "0"
        To: "65535"

  OutboundAllowAllNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: allow
      Egress: "true"
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: "0"
        To: "65535"

  PublicSubnetNetworkAclAssociation0:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnetID
      NetworkAclId: !Ref PublicNetworkAcl

  SecurityGroupPublicInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allowing only ssh incoming and all outgoing traffic.'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref AllowSSHIP
        - IpProtocol: 'icmp'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: !Ref AllowSSHIP
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref AWS::StackName
              - '-SecurityGroup-public-instance'

  SecurityGroupPrivateInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allowing only SSH and ping in from public subnet'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '22'
          ToPort: '22'
          CidrIp: "10.0.1.0/24"
        - IpProtocol: 'icmp'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '10.0.1.0/24'
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref AWS::StackName
              - '-SecurityGroup-private-instance'

Outputs:
  SecurityGroupPublicInstanceId:
    Description: Security Group ID for the public instance
    Value: !Ref SecurityGroupPublicInstance
    Export:
      Name: !Sub ${AWS::Region}-${AWS::StackName}-SecurityGroupPublicInstance

  SecurityGroupPrivateInstanceId:
    Description: Security Group ID for the private instance
    Value: !Ref SecurityGroupPrivateInstance
    Export:
      Name: !Sub ${AWS::Region}-${AWS::StackName}-SecurityGroupPrivateInstance
